--- a/Client/Pages/Public/Blog.razor
+++ b/Client/Pages/Public/Blog.razor
@@ -1,8 +1,10 @@
 ﻿@page "/blog"
 
 <Client.Components.Public.Shared.Navbar />
+
 <h3>Blog</h3>
 
+<Client.Components.Public.Shared.Footer />
 @code {
 
 }
