Create the CategoryCard component

--- a/Client/Pages/Public/Blog.razor
+++ b/Client/Pages/Public/Blog.razor
@@ -1,8 +1,9 @@
 ﻿@page "/blog"
+@using Client.Components.Public.Blog
 
 <Client.Components.Public.Shared.Navbar />
 
-<main class="ql-container min-vh-90 py-5">
+<main class="container min-vh-90 py-5">
     <div class="row">
         <div class="col">
             <h1 class="my-3">Blog</h1>
@@ -10,39 +11,15 @@
 
             <div class="row">
                 <div class="col-md-4">
-                    <div class="card shadow mb-2">
-                        <img src="assets/img/other/placeholder.jpg" class="card-img-top" alt="Category thumbnail image." />
-                        <div class="card-body">
-                            <h3 class="card-title">Category Name</h3>
-                            <p class="card-text">Category Description</p>
-                        </div>
-
-                        <a href="/" class="btn btn-primary streteched-link">View posts</a>
-                    </div>
+                    <CategoryCard />                   
                 </div>
 
                 <div class="col-md-4">
-                    <div class="card shadow mb-2">
-                        <img src="assets/img/other/placeholder.jpg" class="card-img-top" alt="Category thumbnail image." />
-                        <div class="card-body">
-                            <h3 class="card-title">Category Name</h3>
-                            <p class="card-text">Category Description</p>
-                        </div>
-
-                        <a href="/" class="btn btn-primary streteched-link">View posts</a>
-                    </div>
+                    <CategoryCard />
                 </div>
                 
                 <div class="col-md-4">
-                    <div class="card shadow mb-2">
-                        <img src="assets/img/other/placeholder.jpg" class="card-img-top" alt="Category thumbnail image." />
-                        <div class="card-body">
-                            <h3 class="card-title">Category Name</h3>
-                            <p class="card-text">Category Description</p>
-                        </div>
-
-                        <a href="/" class="btn btn-primary streteched-link">View posts</a>
-                    </div>
+                    <CategoryCard />
                 </div>
 
 
