--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -7,5 +7,7 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using Client
+@using Client.Static
+@using Client.Services
 
 
