--- a/Client/Pages/Public/Blog.razor
+++ b/Client/Pages/Public/Blog.razor
@@ -15,7 +15,7 @@
                     for (int i = 0; i < InMemoryDatabaseCache.Categories.Count; i++)
                     {
                         <div class="col-md-4">
-                            <CategoryCard />                   
+                            <CategoryCard Category="InMemoryDatabaseCache.Categories[i]" />                   
                         </div>
                     }
                 }                
