--- a/Client/Components/Public/Shared/Navbar.razor
+++ b/Client/Components/Public/Shared/Navbar.razor
@@ -1,7 +1,7 @@
 ﻿<nav class="navbar nav-underline navbar-expand-lg d-flex flex-wrap ynavbar-light shadow-no-hover justify-content-between align-items-center pb-lg-3">
     <a href="/" class="navbar-brand md-f-size-1-5 text-dark ps-2 m-0 mx-lg-5 fw-bold">John Doe<span class="text-dark fw-normal"> &#8211; .NET Developer</span></a>
 
-    <button class="navbar-toggler mx-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler mx-1 navbar-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
