--- a/Client/Components/Public/Portfolio/ExamplePortfolioProjectModalWindow.razor
+++ b/Client/Components/Public/Portfolio/ExamplePortfolioProjectModalWindow.razor
@@ -1,5 +1,5 @@
 ﻿<div class="modal fade @_modalClass" id="informationalModal" tabindex="-1" aria-lableledby="informationalModalLabel" role="dialog" style="display:@_modalDisplay">
-    <div class="modal-diablog modal-lg">
+    <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="informationalModalLabel">Example Portfolio Project</h5>
@@ -15,19 +15,19 @@
                     </div>
 
                     <div class="carousel-inner">
-                        <div class="carousel-item-active">
+                        <div class="carousel-item active">
                             <a href="/assets/img/publicbackgrounds/bg-motherboard-dev.jpg" target="_blank">
                                 <img src="/assets/img/publicbackgrounds/bg-motherboard-dev.jpg" class="d-block w-100" alt="Portfolio project carousel image" />
                             </a>
                         </div>
 
-                        <div class="carousel-item-active">
+                        <div class="carousel-item">
                             <a href="/assets/img/publicbackgrounds/bg-motherboard.jpg" target="_blank">
                                 <img src="/assets/img/publicbackgrounds/bg-motherboard.jpg" class="d-block w-100" alt="Portfolio project carousel image" />
                             </a>
                         </div>
 
-                        <div class="carousel-item-active">
+                        <div class="carousel-item">
                             <a href="/assets/img/publicbackgrounds/bg-motherboard-dev.jpg" target="_blank">
                                 <img src="/assets/img/publicbackgrounds/bg-motherboard-dev.jpg" class="d-block w-100" alt="Portfolio project carousel image" />
                             </a>
