Expand the About page

--- a/Client/Pages/Public/About.razor
+++ b/Client/Pages/Public/About.razor
@@ -2,7 +2,61 @@
 
 <Client.Components.Public.Shared.Navbar />
 
-<h1>About</h1>
+<main class="ql-container min-vh-90 my-md-5">
+    <div class="row p-4 m5-md-5 shadow-no-hover">
+        <div class="col">
+            <h3 class="text-primary">Who am I?</h3>
+            <h2>I'm Patrick North, a passionate .NET Developer.</h2>
+            <p class="d-inline-flex">
+                I am a software developer that specializes in .NET and Azure development.
+                <br />
+                <br />
+                Solving problems with software is fun to me.
+
+                <br />
+                <br />
+
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce ut dictum lacus. Pellentesque diam mauris, interdum non mollis ac, consectetur quis ipsum. Maecenas ut ligula tincidunt, luctus lacus ut, vehicula nisl. Donec varius nulla at odio consectetur iaculis. Quisque et laoreet velit, at cursus ante. Cras euismod nisl sodales sem volutpat egestas. Vestibulum in metus bibendum, tincidunt nisi vel, tempor nunc. Nullam nulla mi, finibus vitae odio tempor, viverra fringilla erat.
+
+                <br />
+                <br />
+
+                Quisque gravida varius odio eget iaculis. Ut sagittis at libero vel venenatis. Nunc nec lacus pulvinar, commodo tellus at, venenatis libero. Aliquam mauris magna, blandit aliquet nulla in, venenatis interdum arcu. Maecenas arcu tortor, mollis sed porttitor nec, efficitur fringilla ante. Quisque neque lacus, ultricies eget ex sed, congue suscipit odio. Fusce diam lorem, consectetur sit amet aliquam eget, euismod et nunc. Proin at odio placerat, consequat eros id, mollis magna. Vestibulum id magna accumsan diam lacinia imperdiet. Suspendisse libero eros, suscipit ac venenatis vitae, mollis a dolor. Praesent ac risus mattis eros mattis bibendum cursus vel erat. Donec urna dui, vestibulum placerat scelerisque vitae, pellentesque eu velit. Nullam maximus efficitur urna, ut placerat risus interdum in. Etiam malesuada turpis enim, non fringilla mauris ullamcorper quis. Nullam posuere lacinia metus et elementum.
+
+                <br />
+                <br />
+
+                <h2>Background</h2>
+                Nunc lobortis pretium fermentum. Ut tristique turpis quis felis vehicula condimentum. Ut non ultricies est. Nulla et mauris euismod, imperdiet tellus vel, elementum libero. Suspendisse blandit consectetur massa sit amet mattis. Donec vel tempor augue. Mauris non pulvinar nisi, vitae convallis dolor. Suspendisse potenti. Fusce auctor, nisl ut pulvinar feugiat, lorem dolor dictum erat, sit amet eleifend augue urna id sapien.
+            </p>
+
+            <hr />
+
+            <div class="row">
+                <div class="col-md-6">
+                    <a href="~/assets/docs/test-pdf.pdf" download class="btn btn-primary shadow btn-lg d-flex justify-content-center align-items-center my-4">
+                        <i class="fas fa-file-pdf"></i>&nbsp;View resume
+                    </a>
+                </div>
+
+                 <div class="col-md-6">
+                    <a href="/portfolio" class="btn btn-secondary shadow btn-lg d-flex justify-content-center align-items-center my-4">
+                        <i class="fas fa-project-diagram"></i>&nbsp;Projects
+                    </a>
+                </div>
+            </div>
+
+        </div>
+
+
+    </div>
+
+</main>
+
+
+
+
+
 
 <Client.Components.Public.Shared.Footer />
 
