Create the admin navigational sidebar (2/2)

--- a/Client/Pages/Admin/Index.razor
+++ b/Client/Pages/Admin/Index.razor
@@ -1,7 +1,8 @@
 ﻿@page "/admin"
 
 <main class="admin-area-main">
-    @* Sidebar *@
+    
+    <Client.Components.Admin.Sidebar />
 
     <div class="admin-area-content container-fluid bg-white">
         <div class="top-row g-0">
