--- a/Client/Pages/Admin/Categories/Index.razor
+++ b/Client/Pages/Admin/Categories/Index.razor
@@ -5,48 +5,85 @@
     <Client.Components.Admin.Sidebar />
 
     <div class="admin-area-content container-fluid bg-white">
-        <div class="top-row g-0">
+        <div class="row g-0">
             <div class="col">
                 <h1>Categories</h1>
                 <br />
                 <br />
                 <br />
 
-                <div class="row">
-                    <div class="col-lg-4 p-3 md-and-smaller-my-3">
-                        <div class="card shadow">
-                            <a href="/admin/categories" class="stretched-link text-white">
-                                <img src="assets/img/admincards/categories-card-background.jpg" class="card-img" alt="Overview categories card background"/>    
-                                <div class="card-img-overlay d-flex flex-column">
-                                    <h1 class="card-title fw-bold">Categories</h1>
-                                    <h4 class="card-text">3 categories exist.</h4>
-
-                                    <div class="d-flex align-items-end justify-content-end flex-grow-1">
-                                        <i class="fas fa-arrow-right ms-4 h1"></i>
-                                    </div>
-                                </div>
-                            </a>
-                           
-                        </div>
+                @if (InMemoryDatabaseCache.Categories == null)
+                {
+                    <div class="spinner-grow text-secondary" role="status">
+                        <span class="sr-only">Loading...</span>
                     </div>
+                }                else
+                {
+                    <a href="/admin/categories/create" class="btn btn-success shadow me-5 md-f-size-1-5">
+                        <i class="fas fa-plus"></i> Create category    
+                    </a>
 
-                    <div class="col-lg-4 p-3 md-and-smaller-my-3">
-                        <div class="card shadow">
-                            <a href="/admin/posts" class="stretched-link text-white">
-                                <img src="assets/img/admincards/posts-card-background.jpg" class="card-img" alt="Overview categories card background"/>    
-                                <div class="card-img-overlay d-flex flex-column">
-                                    <h1 class="card-title fw-bold">Posts</h1>
-                                    <h4 class="card-text">6 posts exist.</h4>
+                    <button @onclick="() => InMemoryDatabaseCache.GetCategoriesFromDatabaseAndCache()" class="btn btn-primary shadow md-f-size-1-5">
+                        <i class="fa fa-sync"></i> Refresh data
+                    </button>
 
-                                    <div class="d-flex align-items-end justify-content-end flex-grow-1">
-                                        <i class="fas fa-arrow-right ms-4 h1"></i>
-                                    </div>
-                                </div>
-                            </a>
-                           
+                    <br />
+                    <br />
+                    <br />
+
+                    @if (InMemoryDatabaseCache.Categories.Count < 1)
+                    {
+                        <h1>No categories found. Please create one.</h1>
+                    }
+                    else
+                    {
+                        <div class="table-responsive">
+                            <table class="table table-striped table-bordered table-sm">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">Name</th>
+                                        <th scope="col">Thumbnail</th>
+                                        <th scope="col">Description</th>
+                                        <th scope="col">Actions</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @foreach (var category in InMemoryDatabaseCache.Categories)
+                                    {
+                                        <tr>
+                                            <th class="w-15" scope="row">
+                                                <p>@category.Name</p>
+                                            </th>
+                                            <td class="w-35">
+                                                <img src="@($"{APIEndpoints.ServerBaseUrl}/{category.ThumbnailImagePath}")" class="admin-index-thumbnail-image" alt="Category thumbnail image" />
+                                            </td>
+                                            <td class="w-15">
+                                                <p>@category.Description</p>
+                                            </td>
+                                            <td class="w-35">
+                                                <div class="d-flex flex-column">
+                                                    <a href="/admin/categories/update/@category.CategoryId" class="btn btn-update shadow md-f-size-1-5">
+                                                        <i class="fas fa-edit"></i> Update
+                                                    </a>
+
+                                                    <br />
+
+                                                    <button class="btn btn-danger shadow md-f-size-1-5">
+                                                        <i class+"fas fa-trash"></i> Delete
+                                                    </button>
+                                                </div>
+                                            </td>
+                                        </tr>
+
+                                    }
+                                </tbody>
+
+                            </table>
                         </div>
-                    </div>
-                </div>
+                    }
+                }
+                    
+                
 
             </div>
 
