--- a/Client/Pages/Admin/Index.razor
+++ b/Client/Pages/Admin/Index.razor
@@ -5,7 +5,7 @@
     <Client.Components.Admin.Sidebar />
 
     <div class="admin-area-content container-fluid bg-white">
-        <div class="top-row g-0">
+        <div class="row g-0">
             <div class="col">
                 <h1>Overview</h1>
                 <br />
