--- a/Client/Pages/Admin/Categories/Create.razor
+++ b/Client/Pages/Admin/Categories/Create.razor
@@ -17,7 +17,7 @@
             Category addedCategory = await response.Content.ReadFromJsonAsync<Category>();
             InMemoryDatabaseCache.Categories.Add(addedCategory);
 
-            AbandonedMutexException = true;
+            _createSuccessful = true;
         }
         else
         {
