Create some reusable components.

--- a/Client/Pages/Admin/Categories/Index.razor
+++ b/Client/Pages/Admin/Categories/Index.razor
@@ -14,10 +14,9 @@
 
                 @if (InMemoryDatabaseCache.Categories == null)
                 {
-                    <div class="spinner-grow text-secondary" role="status">
-                        <span class="sr-only">Loading...</span>
-                    </div>
-                }                else
+                   <LoadingDot />
+                }
+                else
                 {
                     <a href="/admin/categories/create" class="btn btn-success shadow me-5 md-f-size-1-5">
                         <i class="fas fa-plus"></i> Create category    
@@ -81,7 +80,8 @@
                             </table>
                         </div>
                     }
-                }
+                }
+
                     
                 
 
