--- a/Client/Components/Shared/Toast.razor
+++ b/Client/Components/Shared/Toast.razor
@@ -1,11 +1,11 @@
-﻿<div id="liveToast"> class="mb-5 toast fade @_showClass" role="alert" aria-live="assertive" aria-atomic="true">
+﻿<div id="liveToast" class="mb-5 toast fade @_showClass" role="alert" aria-live="assertive" aria-atomic="true">
     <div class="toast-header">
         <svg class="bd-placeholder-img me-2" width="20" height="20" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="@(IsError ? "#ff0800" : "#007aff")"></rect></svg>
         <strong class="me-auto">@ToastTitle</strong>
         <small>@_time</small>
-        <button onclick="OnClickBtnClose" type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        <button @onclick="OnClickBtnClose" type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
     </div>
-    <div class= "toast-body">
+    <div class="toast-body">
         @ToastBody
     </div>
 </div>
