Fix bool errors

--- a/Client/Pages/Admin/Categories/Create.razor
+++ b/Client/Pages/Admin/Categories/Create.razor
@@ -1,5 +1,5 @@
 ﻿@page "/admin/categories/create"
-@using System.Net
+@using System.Net;
 
 <main class="admin-area-main">
     <Client.Components.Admin.Sidebar />
