--- a/Client/Pages/Admin/Posts/Create.razor
+++ b/Client/Pages/Admin/Posts/Create.razor
@@ -79,7 +79,7 @@
 
                         <div class="form-group mb-5">
                             <label for="postPublished">Post published</label>
-                            <InputCheckbox @bind-Value="@_postToCreate.Published" class="form-check-input" id="postPublished" aria-aria-describedby="postPublishedHelp" />
+                            <InputCheckbox @bind-Value="@_postToCreate.Published" class="form-check-input" id="postPublished" aria-describedby="postPublishedHelp" />
                             <div id="postPublishedHelp" class="form-text">
                                 The value of this specifies whether this blog post is visible on the user facing site or not.
                                 Publishing a blog post also updates the value of the PublishDate field.
