--- a/Client/Pages/Admin/Posts/Index.razor
+++ b/Client/Pages/Admin/Posts/Index.razor
@@ -80,13 +80,13 @@
 
                                                     @if (post.Published == false)
                                                     {
-                                                        <button class="btn btn-success shadow md-f-size-1-5">
+                                                        <button @onclick="() => PublishOrUnpublishPost(post)" class="btn btn-success shadow md-f-size-1-5">
                                                             <i class="fas fa-eye"></i> Publish
                                                         </button>
                                                     }
                                                     else
                                                     {
-                                                        <button class="btn btn-secondary shadow md-f-size-1-5">
+                                                        <button @onclick="() => PublishOrUnpublishPost(post)" class="btn btn-secondary shadow md-f-size-1-5">
                                                             <i class="fas fa-eye-slash"></i> Unpublish
                                                         </button>
                                                     }
@@ -116,6 +116,7 @@
                 }
 
                 <div class="position-fixed bottom-0 end-5 z-index-5">
+
                     @if (_successfullyDeletedAPost == true)
                     {
                         <Toast IsError="false" ToastTitle="Successfully deleted a post."
@@ -129,6 +130,21 @@
                            ToastBody="@($"The reason is \"{_reasonUnsuccessfullyTriedToDeleteAPost})\"Please try again and if the issue persists contact the administrator.")"
                            ParentMethodToCallOnClickBtnClose="() => _unsuccessfullyTriedToDeleteAPost = false" />
                     }
+
+                     @if (_successfullyPublishedOrUnpublished == true)
+                    {
+                        <Toast IsError="false" ToastTitle="@($"{(_lastPublishedOrUnpublishedPost.Published ? "Publish" : "Unpublish")} successful.")"
+                           ToastBody="@($"{(_lastPublishedOrUnpublishedPost.Published ? "The post is now visible on the public site." : "The post is now no longer on the public site.")}")"
+                           ParentMethodToCallOnClickBtnClose="() => _successfullyDeletedAPost = false" />
+                    }
+
+                     @if (_unsuccessfullyTriedToPublishOrUnpublish == true)
+                    {
+                        <Toast IsError="true" ToastTitle="Publish or unpublish failed."
+                           ToastBody="Something went wrong when communcating with the server. Please try again and if the issue persists contact the administrator."
+                           ParentMethodToCallOnClickBtnClose="() => _successfullyDeletedAPost = false" />
+                    }
+
                 </div>
             </div>
         </div>
@@ -182,6 +198,33 @@
 
         _attemptingToDeleteAPost = false;
         StateHasChanged();
+    }
+
+    private bool _successfullyPublishedOrUnpublished = false;
+    private bool _unsuccessfullyTriedToPublishOrUnpublish = false;
+    private Post _lastPublishedOrUnpublishedPost = null;
+    private async Task PublishOrUnpublishPost(Post postToPublishOrUnpublish)
+    {
+        postToPublishOrUnpublish.Published = !postToPublishOrUnpublish.Published;
+
+        HttpResponseMessage httpResponseMessage = await HttpClient.PutAsJsonAsync<Post>($"{APIEndpoints.s_posts}/{postToPublishOrUnpublish.PostId}", postToPublishOrUnpublish);
+
+        if (httpResponseMessage.StatusCode == HttpStatusCode.Created)
+        {
+            Post updatedPost = await httpResponseMessage.Content.ReadFromJsonAsync<Post>();
+
+            _lastPublishedOrUnpublishedPost = updatedPost;
+
+            Post uneditedPostInList = await InMemoryDatabaseCache.GetPostByPostId(postToPublishOrUnpublish.PostId);
+            uneditedPostInList.Published = updatedPost.Published;
+            uneditedPostInList.PublishDate = updatedPost.PublishDate;
+
+            _successfullyPublishedOrUnpublished = true;
+        }
+        else
+        {
+            _unsuccessfullyTriedToPublishOrUnpublish = true;
+        }
     }
 }
 
