Finish the categories Index page

--- a/Client/Pages/Admin/Posts/Update.razor
+++ b/Client/Pages/Admin/Posts/Update.razor
@@ -1,7 +1,8 @@
 ﻿@page "/admin/posts/update/{PostId:int}"
 @using System.Net;
 
-
+<AuthorizeView Roles="Administrator">
+	<Authorized Context="Auth">
 		<main class="admin-area-main">
 			<Client.Components.Admin.Sidebar />
 
@@ -128,8 +129,11 @@
 				</div>
 			</div>
 		</main>
-	
-	
+	</Authorized>
+	<NotAuthorized>
+		<Client.Components.Admin.SignIn />
+	</NotAuthorized>
+</AuthorizeView>
 
 @code
 {
