Fix server errors

--- a/Client/Pages/Public/Blog/CategoriesIndex.razor
+++ b/Client/Pages/Public/Blog/CategoriesIndex.razor
@@ -23,7 +23,7 @@
 
 				@if (_publishedPosts.Count < 1)
 				{
-					<h3>No posts found.</h3>
+					<h3>No categories found.</h3>
 				}
 				else if (_publishedPosts.Count < 3)
 				{
